--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-<h1>For Dummy!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>RbxlXtrade - DOWN</title>
+
+    <style>
+        *{
+            padding: 0;
+            margin: 0px;
+        }
+
+        .content-back{
+            width: 60vw;
+            height: 100%;
+            margin: auto;
+            background-image: url("favicon.png");
+            background-repeat: repeat-y;
+            background-size: 100%;
+        }
+
+        .content-main{
+            background-color: rgba(0, 0, 0, 0.781);
+            width: 100%;
+            height: 100%;
+        }
+
+        .content-main h1, .content-main h3{
+            color: white;
+            text-align: center;
+            text-shadow: 2px;
+            font-family: Tahoma;
+        }
+
+        .content-main p{
+            color: white;
+            text-align: center;
+            text-shadow: 2px;
+            font-family: Tahoma;
+            font-size: 18px;
+        }
+    </style>
+</head>
+<body style="height:100vh; background-color:rgb(25,25,25);">
+    <div class="content-back">
+        <div class="content-main">
+            <br>
+            <h1>RbxlCrossTrade - We are down!</h1>
+            <h3><b>We are Xtremely sorry, but we are down. We will be back on once again when we restore our bots.</b></h3>
+            <hr>
+            <br>
+            <br>
+            <p>Hey, If you are looking for cross-trading across roblox without getting scammed, you are at right place!</p>
+            <p>We provide an interface between two players to exchange their items between 2 seperate games, for robux etc.</p>
+            <p>We work by obtaining your items between our bots and trading back the items to the players.</p>
+            <p>Just sign up an account with us and start the cross trade!</p>
+            <hr>
+            <br><br>
+            <h1>Check back later, we might be back again later!</h1>
+        </div>
+    </div>
+</body>
+</html>
