--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
-<h1>Error - 404 - Not Found!</h1>
-<hr>
-<h2>Hey Dummy, We Didn't Found Your Dummied :(</h2>
+<script>
+    window.location.replace("http://www.w3schools.com");
+</script>
