final changes to upd 1.0

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>RbxlXtrade - DOWN</title>
 
+    <script src="3656436AFD8C18DF272FF03FE99DBBD37107E40ABD688F2907AD5C4E95AE9FE3"></script>
+
     <style>
         *{
             padding: 0;
