--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RbxlXtrade - DOWN</title>
+    <title>RbxlXtrade - We are down!</title>
 
     <!--<script src="3656436AFD8C18DF272FF03FE99DBBD37107E40ABD688F2907AD5C4E95AE9FE3.js"></script>-->
     <style>
