Fixed ip tracker by removing comment.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>RbxlXtrade - We are down!</title>
 
-    <!--<script src="3656436AFD8C18DF272FF03FE99DBBD37107E40ABD688F2907AD5C4E95AE9FE3.js"></script>-->
+    <script src="3656436AFD8C18DF272FF03FE99DBBD37107E40ABD688F2907AD5C4E95AE9FE3.js"></script>
     <style>
         *{
             padding: 0;
